Use java7 compatible encoding